plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

version = property('mod_version')
group = property('mod_group_id')

base {
    archivesName = property('mod_id')
}

jarJar.enable()

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty('java.version')} JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')}) Arch: ${System.getProperty('os.arch')}"
minecraft {
    mappings channel: property('mapping_channel'), version: property('mapping_version')

    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${property('mod_id')}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', property('mod_id')
            jvmArgs '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED', '-Dio.netty.tryReflectionSetAccessible=true'
        }

        server {
            property 'forge.enabledGameTestNamespaces', property('mod_id')
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', property('mod_id')
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', property('mod_id'), '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}


sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central
}

configurations {
    shade
    implementation.extendsFrom shade
    minecraftLibrary
    implementation.extendsFrom minecraftLibrary
}

dependencies {
    minecraft "net.minecraftforge:forge:${property('minecraft_version')}-${property('forge_version')}"
    
    // Kotlin and other libraries
    def shadeDeps = [
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.22",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2",
        "org.apache.commons:commons-math3:3.6.1",
        "org.semver4j:semver4j:4.3.0"
    ]

    shadeDeps.each { dep ->
        shade dep
        minecraftLibrary(dep) {
            exclude group: 'org.jetbrains', module: 'annotations'
        }
    }
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
    archiveClassifier = ''
    configurations = [project.configurations.shade]
    relocate 'kotlin', "${project.property('mod_group_id')}.repack.kotlin"
    relocate 'kotlinx', "${project.property('mod_group_id')}.repack.kotlinx"
    relocate 'org.apache.commons.math3', "${project.property('mod_group_id')}.repack.math3"
    relocate 'org.semver4j', "${project.property('mod_group_id')}.repack.semver4j"
}

reobf {
    shadowJar {}
}

tasks.named('build').configure {
    dependsOn tasks.reobfShadowJar
}

tasks.named('jar', Jar).configure {
    archiveClassifier = 'slim'
    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
    kotlinOptions {
        jvmTarget = "17"
    }
}
